# learn-generative-ai

05_microservices_all_in_one_platform/: README.md  terminal work.txt
05_microservices_all_in_one_platform/01_micro_create_project/project_002/: README.md  pyproject.toml
05_microservices_all_in_one_platform/01_micro_create_project/project_002/project_002/: main.py
05_microservices_all_in_one_platform/01_micro_create_project/project_002/tests/: test_myproject.py
05_microservices_all_in_one_platform/02_fastapi_helloworld_online/: README.md  pyproject.toml
05_microservices_all_in_one_platform/02_fastapi_helloworld_online/fastapi_helloworld_online/: main.py
05_microservices_all_in_one_platform/02_fastapi_helloworld_online/tests/: test_main.py
05_microservices_all_in_one_platform/project_001/: README.md  pyproject.toml
05_microservices_all_in_one_platform/project_001/tests/: test_myproject.py
